--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,18 @@
 VER=DEV
 
+#required
+SITE_NAME="Giraffeql Boilerplate"
+SITE_DESCRIPTION="Giraffeql Boilerplate is a basic boilerplate site for showcasing the Giraffeql API querying language in a basic and extendable implementation."
+
+#optional
+SITE_IMAGE_URL=https://cdn.giraffeql.com/permanent/android-chrome-512x512.png
+SITE_CONTACT_EMAIL=hello@giraffeql.com
+SITE_DISCORD_LINK=https://discord.gg/CpSWfub9y6
+SITE_GITHUB_REPOSITORY_URL=https://github.com/big213/giraffeql-boilerplate
+
 #dev
 API_URL=http://localhost:5001/giraffeql-boilerplate/us-central1/api
-IMAGE_SERVING_URL=http://localhost:5001/giraffeql-boilerplate/us-central1/serveImage
+IMAGE_SERVING_URL=https://cdn.giraffeql.com
 
 #production
 #API_URL=https://api.giraffeql.com
