--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -24,13 +24,14 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.18.1",
-    "giraffeql": "^2.0.6",
+    "giraffeql": "^2.0.8",
     "image-resizing": "^0.1.3",
     "knex": "^0.21.21",
     "nanoid": "^3.1.30",
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
