--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -33,6 +33,7 @@ jobs:
           SITE_CONTACT_EMAIL: hello@giraffeql.com
           SITE_DISCORD_LINK: https://discord.gg/CpSWfub9y6
           SITE_GITHUB_REPOSITORY_URL: https://github.com/big213/giraffeql-boilerplate
+          LOGO_HAS_LIGHT_VARIANT:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
