Various frontend and backend tweaks

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -34,6 +34,7 @@ jobs:
           SITE_DISCORD_LINK: https://discord.gg/CpSWfub9y6
           SITE_GITHUB_REPOSITORY_URL: https://github.com/big213/giraffeql-boilerplate
           LOGO_HAS_LIGHT_VARIANT:
+          DEFAULT_GRID_VIEW:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
