Frontend and backend updates

--- a/backend/env.json.example
+++ b/backend/env.json.example
@@ -21,6 +21,9 @@
     "source_bucket": "giraffeql-boilerplate.appspot.com/source",
     "cache_bucket": "giraffeql-boilerplate.appspot.com/cache"
   },
+  "stripe": {
+    "secret_key": ""
+  },
   "base": {
     "origins": "https://boilerplate.giraffeql.com",
     "timeout_seconds": "60"
