--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -20,7 +20,9 @@ SITE_GITHUB_REPOSITORY_URL=https://github.com/big213/giraffeql-boilerplate
 #dev
 API_URL=http://localhost:5001/giraffeql-boilerplate/us-central1/api
 IMAGE_SERVING_URL=https://cdn.giraffeql.com
+STRIPE_PUB_KEY=
 
 #production
 #API_URL=https://api.giraffeql.com
 #IMAGE_SERVING_URL=https://cdn.giraffeql.com
+#STRIPE_PUB_KEY=
