--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "generate:model": "ts-node scripts/generateModel.ts"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.1",
     "axios": "^0.21.4",
     "convert-array-to-csv": "^2.0.0",
     "core-js": "^3.6.5",
@@ -42,6 +43,7 @@
     "prettier": "^2.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
+    "vue-stripe-elements-plus": "^1.0.3",
     "vuetify": "^2.6.14",
     "yargs": "^17.3.1"
   }
