--- a/backend/env.json.example
+++ b/backend/env.json.example
@@ -18,11 +18,14 @@
     "repository": "giraffeql-boilerplate"
   },
   "serve_image": {
-    "source_bucket": "giraffeql-boilerplate.appspot.com/source",
-    "cache_bucket": "giraffeql-boilerplate.appspot.com/cache"
+    "bucket": "giraffeql-boilerplate.appspot.com",
+    "source_path": "source",
+    "cache_path": "cache",
+    "temp_path": "temp"
   },
   "stripe": {
-    "secret_key": ""
+    "secret_key": "",
+    "site_url": "https://ozycon.com"
   },
   "base": {
     "origins": "https://boilerplate.giraffeql.com",
