--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -17,6 +17,15 @@ SITE_GITHUB_REPOSITORY_URL=https://github.com/big213/giraffeql-boilerplate
 #use the grid view by default, instead of list?
 #DEFAULT_GRID_VIEW=true
 
+#use the light mode by default, instead of dark?
+#DEFAULT_LIGHT_MODE=true
+
+#enable social media login?
+#SOCIAL_LOGIN_ENABLED=true
+
+#which subfolder in the default storage bucket to store temp files
+TEMP_STORAGE_PATH=temp
+
 #dev
 API_URL=http://localhost:5001/giraffeql-boilerplate/us-central1/api
 IMAGE_SERVING_URL=https://cdn.giraffeql.com
