--- a/backend/deploy.md.example
+++ b/backend/deploy.md.example
@@ -16,6 +16,13 @@ firebase functions:config:set base.origins="https://example.com" base.timeout_se
 
 # set serveImage config
 
-firebase functions:config:set serve_image.source_bucket="x.appspot.com/source" serve_image.cache_bucket="x.appspot.com/cache"
+firebase functions:config:set serve_image.bucket="x.appspot.com" serve_image.source_path="source" serve_image.cache_path="cache" serve_image.temp_path="temp"
+
+# set stripe config
+
+firebase functions:config:set stripe.secret_key="sk_" stripe.site_url="https://boilerplate.giraffeql.com"
+
+# delete
+firebase functions:config:unset a.b
 
 # env.json file must be in utf-8 encoding
