--- a/backend/env.json.example
+++ b/backend/env.json.example
@@ -21,7 +21,8 @@
     "bucket": "giraffeql-boilerplate.appspot.com",
     "source_path": "source",
     "cache_path": "cache",
-    "temp_path": "temp"
+    "temp_path": "temp",
+    "cdn_url": "https://cdn.ozycon.com"
   },
   "stripe": {
     "secret_key": "",
@@ -29,6 +30,7 @@
   },
   "base": {
     "origins": "https://boilerplate.giraffeql.com",
-    "timeout_seconds": "60"
+    "timeout_seconds": "60",
+    "version": "DEV"
   }
 }
