--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -9,6 +9,7 @@
     "generate:migration": "set DEV=1 && ts-node src/scripts/generateMigration.ts",
     "generate:model": "set DEV=1 && ts-node src/scripts/generateModel.ts",
     "grantDBPermissions": "set DEV=1 && ts-node src/scripts/grantSchemaPermissions.ts",
+    "executeAdminScript": "set DEV=1 && ts-node src/scripts/executeAdminScript.ts",
     "grantAdmin": "set DEV=1 && ts-node src/scripts/grantAdmin.ts",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -23,7 +24,7 @@
     "axios": "^0.21.4",
     "express": "^4.17.1",
     "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1",
+    "firebase-functions": "^4.5.0",
     "giraffeql": "^2.0.13",
     "image-resizing": "^0.1.3",
     "knex": "^0.21.21",
