--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -17,13 +17,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^0.21.4",
     "express": "^4.17.1",
-    "firebase-admin": "^11.10.1",
+    "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
     "giraffeql": "^2.0.13",
     "image-resizing": "^0.1.3",
@@ -36,6 +36,7 @@
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "dotenv": "^16.3.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
