--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,11 +40,12 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fs": "^0.0.1-security",
+    "node": "^16.19.1",
     "prettier": "^2.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "vue-stripe-elements-plus": "^1.0.3",
-    "vuetify": "^2.6.14",
+    "vuetify": "^2.7.1",
     "yargs": "^17.3.1"
   }
 }
