--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@master
       - name: Build Cloud Functions
         run: cd backend/functions && npm ci
-      — name: Create SA key
+      - name: Create SA key
         run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
-      — name: Deploy Cloud Functions
+      - name: Deploy Cloud Functions
         run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && npx firebase-tools deploy --only functions --json
