--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -22,3 +22,15 @@ jobs:
         run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
       - name: Deploy Cloud Functions
         run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && cd backend/functions && npx firebase-tools deploy --only functions --json
+        env:
+          GITHUB_REPOSITORY: giraffeql-boilerplate
+          GITHUB_ORGANIZATION:
+          SERVE_IMAGE_BUCKET: giraffeql-boilerplate.appspot.com
+          SERVE_IMAGE_SOURCE_PATH: source
+          SERVE_IMAGE_CACHE_PATH: cache
+          SERVE_IMAGE_TEMP_PATH: temp
+          SERVE_IMAGE_CDN_URL: https://cdn.giraffeql.com
+          STRIPE_SITE_URL: https://boilerplate.giraffeql.com
+          BASE_ORIGINS: http://localhost:3000,https://boilerplate.giraffeql.com
+          BASE_TIMEOUT_SECONDS: 60
+          BASE_VERSION: ${{ github.sha }}
