--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -9,26 +9,6 @@ on:
       tags:
         description: "Test scenario tags"
 
-env:
-  PG_HOST: ${{ secrets.PG_HOST }}
-  PG_PORT: ${{ secrets.PG_PORT }}
-  PG_USER: ${{ secrets.PG_USER }}
-  PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
-  PG_DATABASE: ${{ secrets.PG_DATABASE }}
-  GITHUB_TOKEN: ${{ secrets.GH_GITHUB_TOKEN }}
-  GITHUB_REPOSITORY: giraffeql-boilerplate
-  GITHUB_ORGANIZATION:
-  SERVE_IMAGE_BUCKET: giraffeql-boilerplate.appspot.com
-  SERVE_IMAGE_SOURCE_PATH: source
-  SERVE_IMAGE_CACHE_PATH: cache
-  SERVE_IMAGE_TEMP_PATH: temp
-  SERVE_IMAGE_CDN_URL: https://cdn.giraffeql.com
-  STRIPE_SITE_URL: https://boilerplate.giraffeql.com
-  BASE_ORIGINS: http://localhost:3000,https://boilerplate.giraffeql.com
-  BASE_TIMEOUT_SECONDS: 60
-  BASE_VERSION: ${{ github.sha }}
-
-jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -37,6 +17,28 @@ jobs:
         uses: actions/checkout@master
       - name: Build Cloud Functions
         run: cd backend/functions && npm ci
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0.2
+        with:
+          PG_HOST: ${{ secrets.PG_HOST }}
+          PG_PORT: ${{ secrets.PG_PORT }}
+          PG_USER: ${{ secrets.PG_USER }}
+          PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+          PG_DATABASE: ${{ secrets.PG_DATABASE }}
+          GITHUB_TOKEN: ${{ secrets.GH_GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: giraffeql-boilerplate
+          GITHUB_ORGANIZATION:
+          SERVE_IMAGE_BUCKET: giraffeql-boilerplate.appspot.com
+          SERVE_IMAGE_SOURCE_PATH: source
+          SERVE_IMAGE_CACHE_PATH: cache
+          SERVE_IMAGE_TEMP_PATH: temp
+          SERVE_IMAGE_CDN_URL: https://cdn.giraffeql.com
+          STRIPE_SITE_URL: https://boilerplate.giraffeql.com
+          BASE_ORIGINS: http://localhost:3000,https://boilerplate.giraffeql.com
+          BASE_TIMEOUT_SECONDS: 60
+          BASE_VERSION: ${{ github.sha }}
+          directory: backend/functions
+          file_name: .env
       - name: Create SA key
         run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
       - name: Deploy Cloud Functions
