--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -19,9 +19,8 @@ jobs:
       - name: Build Cloud Functions
         run: cd backend/functions && npm ci
       - name: "Create env file"
-        run: |
-          echo "${{ secrets.ENV_FILE }}" > backend/functions/.env
+        run: echo "${{ secrets.ENV_FILE }}\nBASE_VERSION=${{ github.sha }}" > backend/functions/.env
       - name: Create SA key
         run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
       - name: Deploy Cloud Functions
-        run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && cd backend/functions && npx firebase-tools deploy --only functions:api --json --debug
+        run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && cd backend/functions && npx firebase-tools deploy --only functions:api --json
