--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -39,10 +39,7 @@ jobs:
           SOCIAL_LOGIN_ENABLED:
           TEMP_STORAGE_PATH: temp
           STRIPE_PUB_KEY:
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_PATH: ./frontend
+      - name: Create SA key
+        run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
+      - name: Deploy Hosting
+        run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && cd frontend && npx firebase-tools deploy --only hosting --json
