--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build Cloud Functions
         run: cd backend/functions && npm ci
       - name: "Create env file"
-        run: echo "${{ secrets.ENV_FILE }}" > backend/functions/.env
+        run: echo "${{ secrets.BACKEND_ENV }}" > backend/functions/.env
       - name: "Update env file"
         run: echo -e "BASE_VERSION=${{ github.sha }}" >> backend/functions/.env
       - name: Create SA key
