--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -1,11 +1,11 @@
 ### PRODUCTION ###
 
-#PG_HOST=/cloudsql/tabularasa-145715:us-east1:thingbase-pg-data
+#PG_HOST=/cloudsql/[connection-string]
 #PG_PORT=
 PG_HOST=127.0.0.1
 PG_PORT=3306
-PG_USER=giraffeql_boilerplate_user01
-PG_PASSWORD=S2Azgz82AQaZA4D
+PG_USER=postgres
+PG_PASSWORD=password
 PG_DATABASE=giraffeql-boilerplate-data-prod
 
 ### DEVELOPMENT ###
@@ -13,10 +13,10 @@ PG_DATABASE=giraffeql-boilerplate-data-prod
 DEV_PG_HOST=127.0.0.1
 DEV_PG_PORT=3306
 DEV_PG_USER=postgres
-DEV_PG_PASSWORD=KLnNlIhleCs5eu9F
+DEV_PG_PASSWORD=password
 DEV_PG_DATABASE=giraffeql-boilerplate-data-dev
 
-GITHUB_TOKEN=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
+GITHUB_TOKEN=ghp_sometokenhere
 GITHUB_REPOSITORY=giraffeql-boilerplate
 GITHUB_ORGANIZATION=
 
