--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -21,7 +21,7 @@ GITHUB_REPOSITORY=giraffeql-boilerplate
 GITHUB_ORGANIZATION=
 
 SERVE_IMAGE_BUCKET=giraffeql-boilerplate.appspot.com
-SERVE_IMAGE_SOURCE_PATH=cache
+SERVE_IMAGE_SOURCE_PATH=source
 SERVE_IMAGE_CACHE_PATH=cache
 SERVE_IMAGE_TEMP_PATH=temp
 SERVE_IMAGE_CDN_URL=https://cdn.giraffeql.com
@@ -32,4 +32,4 @@ STRIPE_SITE_URL=https://boilerplate.giraffeql.com
 BASE_ORIGINS=http://localhost:3000,https://boilerplate.giraffeql.com
 BASE_TIMEOUT_SECONDS=60
 BASE_VERSION=DEV
-BASE_SERVICE_ACCOUNT=
+BASE_SERVICE_ACCOUNT=giraffeql-boilerplate@appspot.gserviceaccount.com
