--- a/backend/firebase.json.example
+++ b/backend/firebase.json.example
@@ -35,7 +35,7 @@
       "rewrites": [
         {
           "source": "**",
-          "function": "serveImage"
+          "function": "serveimage"
         }
       ]
     }
