--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "generate:model": "ts-node scripts/generateModel.ts"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^0.21.4",
     "convert-array-to-csv": "^2.0.0",
