--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -4,7 +4,7 @@
     "lint": "eslint --ext .ts",
     "build": "tsc",
     "serve": "set DEV=1 && tsc && firebase emulators:start --only functions",
-    "serve:reload": "set DEV=1 && tsc -w --preserveWatchOutput | firebase emulators:start --only functions",
+    "serve:reload": "set DEV=1 && concurrently \"tsc --watch\" \"firebase emulators:start --only functions\"",
     "generate:schema": "set DEV=1 && ts-node scripts/generateSchema.ts",
     "generate:migration": "set DEV=1 && ts-node scripts/generateMigration.ts",
     "generate:model": "set DEV=1 && ts-node scripts/generateModel.ts",
@@ -27,15 +27,17 @@
     "firebase-functions": "^4.5.0",
     "giraffeql": "^2.0.19",
     "image-resizing": "^0.1.3",
-    "knex": "^0.21.21",
+    "knex": "^3.1.0",
     "nanoid": "^3.1.30",
     "pg": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^22.1.0",
     "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^7.2.0",
@@ -43,8 +45,8 @@
     "firebase-functions-test": "^0.1.7",
     "fs": "0.0.1-security",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "yargs": "^17.3.1"
   },
   "private": true
