Minor frontend and backend tweaks

--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -16,6 +16,9 @@ DEV_PG_USER=postgres
 DEV_PG_PASSWORD=password
 DEV_PG_DATABASE=giraffeql-boilerplate-data-dev
 
+# set this to 1 to simulate dev env, empty for prod
+DEV=1
+
 GITHUB_TOKEN=ghp_sometokenhere
 GITHUB_REPOSITORY=giraffeql-boilerplate
 GITHUB_ORGANIZATION=
