--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -3,11 +3,11 @@
   "scripts": {
     "lint": "eslint --ext .ts",
     "build": "tsc",
-    "serve": "set DEV=1 && tsc && firebase emulators:start --only functions",
-    "serve:reload": "set DEV=1 && concurrently \"tsc --watch\" \"firebase emulators:start --only functions\"",
-    "generate:schema": "set DEV=1 && ts-node scripts/generateSchema.ts",
-    "generate:migration": "set DEV=1 && ts-node scripts/generateMigration.ts",
-    "generate:model": "set DEV=1 && ts-node scripts/generateModel.ts",
+    "serve": "tsc && firebase emulators:start --only functions",
+    "serve:reload": "concurrently \"tsc --watch\" \"firebase emulators:start --only functions\"",
+    "generate:schema": "ts-node scripts/generateSchema.ts",
+    "generate:migration": "ts-node scripts/generateMigration.ts",
+    "generate:model": "ts-node scripts/generateModel.ts",
     "grantDBPermissions": "ts-node scripts/grantSchemaPermissions.ts",
     "executeAdminScript": "ts-node scripts/executeAdminScript.ts",
     "grantAdmin": "ts-node scripts/grantAdmin.ts",
