--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -16,8 +16,10 @@ DEV_PG_USER=postgres
 DEV_PG_PASSWORD=password
 DEV_PG_DATABASE=giraffeql-boilerplate-data-dev
 
-# set this to 1 to simulate dev env, empty for prod
-DEV=1
+# set this to true to simulate dev env, empty or !== 'true' for prod
+DEV=true
+# should console log messages be displayed?
+DEBUG_MODE=true
 
 GITHUB_TOKEN=ghp_sometokenhere
 GITHUB_REPOSITORY=giraffeql-boilerplate
