Various frontend and backend updates

--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -42,3 +42,4 @@ BASE_ORIGINS=http://localhost:3000,https://boilerplate.giraffeql.com
 BASE_TIMEOUT_SECONDS=60
 BASE_VERSION=DEV
 BASE_SERVICE_ACCOUNT=giraffeql-boilerplate@appspot.gserviceaccount.com
+BASE_TIMEZONE=America/New_York
