--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -20,6 +20,8 @@ DEV_PG_DATABASE=giraffeql-boilerplate-data-dev
 DEV=true
 # should console log messages be displayed?
 DEBUG_MODE=true
+# should rootResolvers have an admin validator applied by default, if none is defined?
+DEFAULT_ADMIN_ONLY=true
 
 GITHUB_TOKEN=ghp_sometokenhere
 GITHUB_REPOSITORY=giraffeql-boilerplate
