Minor frontend and backend updates

--- a/backend/functions/.env.example
+++ b/backend/functions/.env.example
@@ -22,6 +22,8 @@ DEV=true
 DEBUG_MODE=true
 # should rootResolvers have an admin validator applied by default, if none is defined?
 DEFAULT_ADMIN_ONLY=true
+# if the user is an admin, always allow the validator to passs
+ALWAYS_ALLOW_IF_ADMIN=true
 
 GITHUB_TOKEN=ghp_sometokenhere
 GITHUB_REPOSITORY=giraffeql-boilerplate
